--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -5,4 +5,4 @@
 github_repos:
   - liujie-zheng/face-to-bmi-vit
   - liujie-zheng/unet-autoencoder
-  - liujie-zheng/panorama
+  - liujie-zheng/panorama-stitcher
